Fixed a bug in pileup mode relating to number of haplotypes (#8489)
* Limited the number of haplotypes returned in pileup mode to the number requested.
* Modified pileup assembly code to be more deterministic.